# Passtore

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Passtore.pro  passtore.db  test
.claude/: settings.local.json
.github/: copilot-instructions.md
Passtore/: MainWindow.cpp  MainWindow.ui  Passtore.pro  Resource.h  ResourceWidget.cpp  ResourceWidget.ui  ResourcesListWidget.cpp  ResourcesListWidget.ui  stdafx.h
ext/: CMakeLists.txt  ext.pro
ext/SimpleJSON/: CMakeLists.txt  SimpleJSON.pro  json.hpp
ext/TinyAES/: CMakeLists.txt  aes.c
ext/fltk/: CMakeLists.txt
ext/fltk/CMake/: fl_add_library.cmake
ext/fltk/FL/: Fl_Printer.H
ext/fltk/fltk-options/: CMakeLists.txt
ext/fltk/fluid/: CMakeLists.txt  Fl_Type.cxx  factory.cxx  fluid.cxx
ext/fltk/libdecor/src/plugins/cairo/: libdecor-cairo.c
ext/fltk/libdecor/src/plugins/gtk/: libdecor-gtk.c
ext/fltk/src/: Fl_Text_Display.cxx  Fl_Timeout.cxx  fl_symbols.cxx
ext/fltk/src/drivers/Wayland/: Fl_Wayland_Screen_Driver.cxx
ext/fltk/test/: clipboard.cxx  symbols.cxx  unittest_images.cxx
ext/gtest/: CMakeLists.txt  gtest.pro
ext/plog/: CMakeLists.txt  plog.pro
ext/sqlite/: CMakeLists.txt  sqlite.pro
plan/: general.md  plan_sprint.md  the_plan.md  vulnerabilities.md
scripts/: build.bat  build.sh  run.bat  run.sh  test.bat  test.sh
src/: CMakeLists.txt  Cryptor.cpp  Cryptor.h  Database.cpp  Database.h  DatabaseQueries.cpp  DatabaseQueries.h  MainWindow.ui  Passtore.pro  Resource.cpp  Resource.h  ResourceViewDelegate.cpp  ResourceViewDelegate.h  ResourcesListWidget.h  ResourcesListWidget.ui  ResourcesModel.cpp  ResourcesModel.h  Settings.h  main.cpp  pch.h  src.pro
src/Models/: ResourceTableModel.cpp  ResourceTableModel.h  ResourceViewDelegate.cpp
src/Passtore/: CMakeLists.txt  Passtore.pro  Settings.cpp  Settings.h  main.cpp  pch.h
src/Passtore/Models/: Cache.h  ITableModel.h  ResourceTableModel.cpp  ResourceTableModel.h  ResourceTableModelRoles.h  ResourceViewDelegate.cpp  ResourceViewDelegate.h
src/Passtore/Ui/: AddResourceDialog.ui  ResourcesListWidget.ui  SettingsDialog.ui
src/Passtore/Widgets/: ChangePasswordDialog.cpp  ChangePasswordDialog.h  ColumnSettingsWidget.cpp  ColumnSettingsWidget.h  MainWindow.cpp  MainWindow.h  MainWindow_nana.cpp  ResourcesListWidget.cpp  ResourcesListWidget.h  ResourcesTableWidget.cpp  ResourcesTableWidget.h  ResourcesTableWidget_nana.cpp  SettingsDialog.cpp  SettingsDialog.h
src/PasstoreLib/: CMakeLists.txt  Cryptor.cpp  Cryptor.h  PasstoreLib.pro  pch.h
src/PasstoreLib/Security/: Cryptor.cpp  Cryptor.h  SecureMemory.h  SensitiveData.h
src/PasstoreLib/Storages/: IResourceStorage.h  IStorage.h  Marshaling.cpp  Marshaling.h  Resource.h  TableSettings.cpp  TableSettings.h
src/PasstoreLib/Storages/SQLite/: CellsCryptor.cpp  CellsCryptor.h  Connection.cpp  Connection.h  IndexConverter.cpp  IndexConverter.h  Query.cpp  Query.h  SQLiteColumns.cpp  SQLiteColumns.h  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteDatabaseQueries.cpp  SQLiteDatabaseQueries.h  Transaction.cpp  Transaction.h
src/PasstoreLib/Utils/: DataUtils.cpp  DataUtils.h  sha256.cpp
src/PasstoreLibTest/: CMakeLists.txt  CryptorTest.cpp  PasstoreLibTest.pro  SQLiteDatabaseTest.cpp  TableSettingsTest.cpp  main.cpp  pch.h
src/Storages/: IStorage.h
src/Storages/SQLite/: IndexConverter.cpp  IndexConverter.h  SQLiteColumns.cpp  SQLiteColumns.h  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteDatabaseQueries.cpp  SQLiteDatabaseQueries.h
src/Ui/: ColumnSettingsWidget.ui  ResourceWidget.ui  ResourcesListWidget.ui  VisibilitySettingsDialog.ui
src/Widgets/: ColumnSettingsWidget.cpp  ColumnSettingsWidget.h  MainWindow.cpp  MainWindow.h  ResourceWidget.h  ResourcesListWidget.cpp  ResourcesListWidget.h  SettingsDialog.cpp  SettingsDialog.h
